toast exercises done

--- a/src/components/Toast/Toast.module.css
+++ b/src/components/Toast/Toast.module.css
@@ -10,6 +10,16 @@
   max-width: 100%;
   width: 350px;
   box-shadow: var(--shadow-elevation-medium);
+  margin-bottom: 1rem;
+  animation: toast 1s;
+}
+
+@keyframes toast {
+
+  from {
+    transform: translateX(100%);
+  }
+
 }
 
 .content {
